kube-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kong
  name: express-start
spec:
  selector:
    app: express-start
  type: NodePort
  ports:
    - port: 4001
      nodePort: 30001
      targetPort: 4000
